# StoneFlow-new

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: bundle-helper.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-helper/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-helper/capabilities/: default.json
src-tauri-helper/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/desktop-app/: Cargo.toml
src-tauri/crates/desktop-app/src/: lib.rs
src-tauri/crates/desktop-app/src/app/: command_helper.rs  error.rs  events.rs  helper_process.rs  mod.rs  tray.rs
src-tauri/crates/desktop-app/src/app/commands/: focus.rs  inbox.rs  mod.rs  project.rs  quick_capture.rs  resource.rs  search.rs  space.rs  task.rs  task_drawer.rs  trash.rs
src-tauri/crates/desktop-app/src/application/: create.rs  focus.rs  inbox.rs  mod.rs  project.rs  resource.rs  search.rs  task_drawer.rs  trash.rs
src-tauri/crates/desktop-app/src/infrastructure/: database.rs  mod.rs  repositories.rs  seed.rs
src-tauri/crates/desktop-app/src/ipc/: mod.rs  server.rs
src-tauri/crates/desktop-app/src/tests/: focus_tests.rs  inbox_tests.rs  m3_e_project_hierarchy_tests.rs  m4_a_capture_tests.rs  mod.rs  project_tests.rs  resource_tests.rs  search_tests.rs  space_tests.rs  task_drawer_tests.rs  task_tests.rs  trash_tests.rs
src-tauri/crates/entity/: Cargo.toml
src-tauri/crates/entity/src/: focus_view.rs  lib.rs  project.rs  resource.rs  space.rs  task.rs  trash_entry.rs
src-tauri/crates/helper-app/: Cargo.toml
src-tauri/crates/helper-app/src/: commands.rs  ipc_client.rs  lib.rs  panel.rs  panel_windows.rs  shortcut.rs  window_spec.rs
src-tauri/crates/ipc-protocol/: Cargo.toml
src-tauri/crates/ipc-protocol/src/: lib.rs
src-tauri/crates/migration/: Cargo.toml
src-tauri/crates/migration/src/: lib.rs  m20260419_000001_init.rs  m20260419_000002_core_entity_bootstrap.rs
src-tauri/helper-bin/: Cargo.toml  tauri.conf.json
src-tauri/helper-bin/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: App.tsx  router.tsx
src/app/layouts/: SpaceLayout.test.tsx  SpaceLayout.tsx
src/app/layouts/main-card/: MainCardLayout.tsx
src/app/layouts/shell/: ShellDrawer.tsx  ShellFooter.test.tsx  ShellFooter.tsx  ShellHeader.test.tsx  ShellHeader.tsx  ShellLayout.tsx  ShellMain.test.tsx  ShellMain.tsx  ShellSidebar.test.tsx  ShellSidebar.tsx  config.test.ts  config.ts  types.ts
src/app/providers/: AppProviders.tsx
src/features/focus/api/: focusApi.test.ts  getFocusViewTasks.ts  listFocusViews.ts  updateTaskPinState.ts
src/features/focus/model/: types.ts  useFocusWorkspace.test.tsx  useFocusWorkspace.ts
src/features/focus/ui/: FocusPage.test.tsx  FocusPage.tsx
src/features/global-search/api/: searchWorkspace.ts
src/features/global-search/model/: useGlobalSearch.ts
src/features/global-search/ui/: GlobalSearchInput.test.tsx  GlobalSearchInput.tsx  GlobalSearchResults.tsx
src/features/healthcheck/api/: healthcheck.ts
src/features/healthcheck/model/: useHealthcheckStatus.test.tsx  useHealthcheckStatus.ts
src/features/inbox/api/: listInboxTasks.ts  triageInboxTask.ts
src/features/inbox/model/: constants.ts  useInboxTasks.ts
src/features/inbox/ui/: InboxPage.test.tsx  InboxPage.tsx
src/features/project/api/: createProject.ts  getProjectExecutionView.ts  listProjects.ts  projectApi.test.ts  updateProjectTaskStatus.ts
src/features/project/model/: types.ts  useProjectCreate.ts  useProjectExecution.ts
src/features/project/ui/: ProjectContextMenu.tsx  ProjectCreateDialog.test.tsx  ProjectCreateDialog.tsx  ProjectCreateModalContent.test.tsx  ProjectCreateModalContent.tsx  ProjectPage.test.tsx  ProjectPage.tsx  ProjectTaskBoard.tsx
src/features/quick-capture/api/: createCaptureTask.ts  openCommandResult.ts  openQuickCapture.ts  quickCaptureApi.test.ts
src/features/quick-capture/ui/: QuickCapturePage.test.tsx  QuickCapturePage.tsx
src/features/settings/ui/: SettingsPage.test.tsx  SettingsPage.tsx
src/features/space/model/: useSpaceShellStore.ts
src/features/task-capture/api/: createTask.ts
src/features/task-capture/model/: useTaskCapture.ts
src/features/task-capture/ui/: TaskCaptureDrawerContent.test.tsx  TaskCaptureDrawerContent.tsx
src/features/task-drawer/api/: createTaskResource.ts  deleteTaskResource.ts  deleteTaskToTrash.ts  getTaskDrawerDetail.ts  listTaskResources.ts  openTaskResource.ts  resourceApi.test.ts  updateTaskDrawerFields.ts
src/features/task-drawer/model/: types.ts  useTaskDrawer.test.tsx  useTaskDrawer.ts
src/features/task-drawer/ui/: TaskDrawerContent.test.tsx  TaskDrawerContent.tsx
src/features/task/api/: createTask.ts  setActiveSpace.ts  taskApi.test.ts
src/features/task/model/: useTaskCreate.ts
src/features/task/ui/: TaskContextMenu.tsx  TaskCreateDialog.test.tsx  TaskCreateDialog.tsx  TaskCreateModalContent.test.tsx  TaskCreateModalContent.tsx
src/features/trash/api/: deleteProjectToTrash.ts  listTrashEntries.ts  restoreProjectFromTrash.ts  restoreTaskFromTrash.ts  trashApi.test.ts
src/features/trash/model/: types.ts  useTrashEntries.ts
src/features/trash/ui/: TrashPage.test.tsx  TrashPage.tsx
src/shared/events/: commandOpen.test.ts  commandOpen.ts  taskChanged.test.ts  taskChanged.ts
src/shared/ui/: AppFrame.tsx  Kbd.tsx  ListItem.tsx  MainCardLayout.tsx  PanelSurface.tsx  StatusNotice.tsx  badgeSemantics.ts  linearSurface.ts
src/shared/ui/base/: accordion.tsx  badge.tsx  breadcrumb.tsx  button.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  input.tsx  kbd.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar-context.tsx  sidebar.test.tsx  sidebar.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/shared/ui/shell/: Kbd.tsx  PanelSurface.tsx
src/styles/: index.css
src/test/: setup.ts
(+6 files in other folders)
