[package]
name = "stoneflow-helper"
description = "StoneFlow Command Helper (Accessory process)"
authors = ["StoneFish"]
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# Helper 的 Tauri 宿主：只放 `tauri.conf.json` 生成所需的 build.rs + main 入口；
# 全部业务位于 `crates/helper-app` 库 crate，便于单测与复用。

[[bin]]
name = "stoneflow-helper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
stoneflow-helper-app = { path = "../src-tauri/crates/helper-app" }
tauri.workspace = true
