[workspace]
members = [
  "crates/core",
  "crates/desktop-app",
  "crates/entity",
  "crates/helper-app",
  "crates/ipc-protocol",
  "crates/migration",
  "helper-bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77.2"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
interprocess = { version = "2", features = ["tokio"] }
log = "0.4"
sea-orm = { version = "1.1.20", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stoneflow-ipc-protocol = { path = "crates/ipc-protocol" }
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }

[package]
name = "stoneflow"
description = "StoneFlow"
authors = ["StoneFish"]
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
desktop-app = { path = "crates/desktop-app" }
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-window-state.workspace = true
