[package]
name = "stoneflow-migration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "stoneflow_migration"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde_json.workspace = true
uuid.workspace = true
stoneflow-entity = { path = "../entity" }
